# howmuch-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: currencies.rs  lib.rs  main.rs  model.rs  resources.rs
src/cli/: mod.rs
tests/: example.json
