[package]
name = "howmuch-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
clap = { version = "4.0.22", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
reqwest = "0.11.13"
jsonp = "1.0.2"
