[package]
name = "howmuch-rs"
version = "0.1.1"
edition = "2021"
authors = ["Abdelhamid Bakhta <@abdelhamidbakhta>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/howmuch-rs"
repository = "https://github.com/abdelhamidbakhta/howmuch-rs"
homepage = "https://docs.rs/howmuch-rs"
description = "A library providing helpers for various StarkNet fees related tasks."

[dependencies]
eyre = "0.6.8"
clap = { version = "4.0.22", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
log = "0.4.17"
env_logger = "0.10.0"
ethers = "1.0.2"
reqwest = "0.11.13"
jsonp = "1.0.2"
